<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/show_user_list_admin_text_view"
        android:layout_width="@dimen/zero_value"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_4dp"
        android:autoSizeTextType="uniform"
        android:gravity="center_horizontal"
        android:maxLines="2"
        android:text="@string/show_user_list"
        android:textSize="@dimen/text_size_12sp"
        app:layout_constraintEnd_toStartOf="@id/user_update_admin_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.35" />
    <TextView
        android:id="@+id/user_update_admin_text_view"
        android:layout_width="@dimen/zero_value"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_4dp"
        android:autoSizeTextType="uniform"
        android:gravity="center_horizontal"
        android:maxLines="2"
        android:text="@string/admin_user_update_text"
        android:textSize="@dimen/text_size_12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/show_user_list_admin_text_view"
        app:layout_constraintTop_toTopOf="parent" />
    <ScrollView
        android:id="@+id/user_list_admin_scroll_view"
        android:layout_width="@dimen/zero_value"
        android:layout_height="@dimen/zero_value"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@id/delete_user_admin_button"
        app:layout_constraintEnd_toEndOf="@id/show_user_list_admin_text_view"
        app:layout_constraintStart_toStartOf="@id/show_user_list_admin_text_view"
        app:layout_constraintTop_toBottomOf="@id/show_user_list_admin_text_view">
        <TextView
            android:id="@+id/user_list_admin_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/margin_16dp" />
    </ScrollView>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/target_user_login_admin_text_field"
        android:layout_width="@dimen/zero_value"
        android:layout_height="wrap_content"
        android:hint="@string/admin_updating_user_login"
        app:layout_constraintEnd_toEndOf="@id/user_update_admin_text_view"
        app:layout_constraintStart_toStartOf="@id/user_update_admin_text_view"
        app:layout_constraintTop_toBottomOf="@id/user_update_admin_text_view">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/target_user_login_admin_text_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:textSize="@dimen/text_size_12sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/get_user_admin_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="@dimen/zero_value"
        android:layout_height="@dimen/admin_button_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="@dimen/margin_4dp"
        android:insetTop="@dimen/zero_value"
        android:insetBottom="@dimen/zero_value"
        android:text="@string/admin_get_user_button_text"
        android:textAllCaps="false"
        android:textSize="@dimen/admin_user_list_button_text_size"
        app:layout_constraintEnd_toEndOf="@id/target_user_login_admin_text_field"
        app:layout_constraintStart_toStartOf="@id/target_user_login_admin_text_field"
        app:layout_constraintTop_toBottomOf="@id/target_user_login_admin_text_field" />
    <TextView
        android:id="@+id/user_id_admin_text_view"
        android:layout_width="@dimen/zero_value"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="@id/get_user_admin_button"
        app:layout_constraintStart_toStartOf="@id/get_user_admin_button"
        app:layout_constraintTop_toBottomOf="@id/get_user_admin_button"
        tools:text="@tools:sample/lorem" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_login_admin_text_field"
        android:layout_width="@dimen/zero_value"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_4dp"
        android:hint="@string/new_login"
        app:layout_constraintEnd_toEndOf="@id/user_id_admin_text_view"
        app:layout_constraintStart_toStartOf="@id/user_id_admin_text_view"
        app:layout_constraintTop_toBottomOf="@id/user_id_admin_text_view">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_login_admin_text_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:textSize="@dimen/text_size_12sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_password_admin_text_field"
        android:layout_width="@dimen/zero_value"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@id/new_login_admin_text_field"
        app:layout_constraintStart_toStartOf="@id/new_login_admin_text_field"
        app:layout_constraintTop_toBottomOf="@id/new_login_admin_text_field">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_password_admin_text_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="@dimen/text_size_12sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_changes_admin_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="@dimen/zero_value"
        android:layout_height="@dimen/admin_button_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="@dimen/margin_4dp"
        android:insetTop="@dimen/zero_value"
        android:insetBottom="@dimen/zero_value"
        android:text="@string/admin_save_user_changes_button_text"
        android:textAllCaps="false"
        android:textSize="@dimen/admin_user_list_button_text_size"
        app:layout_constraintEnd_toEndOf="@id/new_password_admin_text_field"
        app:layout_constraintStart_toStartOf="@id/new_password_admin_text_field"
        app:layout_constraintTop_toBottomOf="@id/new_password_admin_text_field" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_user_admin_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="@dimen/zero_value"
        android:layout_height="@dimen/admin_button_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="@dimen/margin_4dp"
        android:insetTop="@dimen/zero_value"
        android:insetBottom="@dimen/zero_value"
        android:text="@string/admin_delete_user_button_text"
        android:textAllCaps="false"
        android:textSize="@dimen/admin_user_list_button_text_size"
        app:layout_constraintEnd_toEndOf="@id/save_changes_admin_button"
        app:layout_constraintStart_toStartOf="@id/save_changes_admin_button"
        app:layout_constraintTop_toBottomOf="@id/save_changes_admin_button" />
</androidx.constraintlayout.widget.ConstraintLayout>